--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             border-radius: 18px;
             box-shadow: 0 2px 12px #e8ecf777;
             padding: 24px 36px;
-            min-width: 170px;
+            min-width: 190px;
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -72,11 +72,13 @@
             color: #9ca3af;
             font-size: 1.1rem;
             margin-bottom: 7px;
+            white-space: nowrap;
         }
         .kpi .value {
             color: #c22a59;
             font-size: 2.2rem;
             font-weight: 700;
+            white-space: nowrap;
         }
         .kpi .nps-detail {
             margin-top: 7px;
