Restore previous KPI card width

--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
             color: #9ca3af;
             font-size: 1.1rem;
             margin-bottom: 7px;
+            white-space: nowrap;
         }
         .kpi .value {
             color: #c22a59;
             font-size: 2.2rem;
             font-weight: 700;
+            white-space: nowrap;
         }
         .kpi .nps-detail {
             margin-top: 7px;
