Ampliar largura da coluna de valores

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             font-size: 1.10rem;
             text-align: right;
             display: inline-block;
-
+            width: 120px;
             width: 100px;
             position: relative;
             font-variant-numeric: tabular-nums;
